Prevent overflow of searchresults with long urls
Small css change to prevent overflow of searchresults with long url's

--- a/src/Umbraco.Web.UI.Client/src/less/components/tree/umb-tree.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/tree/umb-tree.less
@@ -48,6 +48,8 @@
         color: @gray-7;
         display: block;
         padding-left: 35px;
+        white-space: initial;
+        text-align: left;
     }
 }
 
